--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "serverIP": "localhost",
-    "defaultSQLUser": "",
-    "defaultSQLDatabase": "",
-    "defaultSQLPassword": "",
+    "host": "localhost",
+    "user": "",
+    "database": "",
+    "password": "",
     "pathToFiles": "./migrations"
 }
